[package]
authors = ["Mikhail Kviatkovskii <mikhail.kviatkovskii@pm.me>"]
description = "File-based chemical search engine on Rust"
edition = "2021"
homepage = "https://github.com/mkviatkovskii/ringo"
keywords = ["cheminformatics", "smiles", "fingerprint", "search", "rust"]
license = "Apache-2.0"
name = "ringo"
readme = "README.md"
repository = "https://github.com/mkviatkovskii/ringo.git"
version = "0.0.1"

[dependencies]
bincode = "2.0.0-rc.3"
clickrs = "0.1.5"
fixedbitset = "0.5.7"
nom = "7.1.3"
petgraph = "0.6.5"

[lib]
name = "ringo"
path = "src/lib.rs"

[[bin]]
name = "ringo-index"
path = "src/bin/ringo_index.rs"

[[bin]]
name = "ringo-search"
path = "src/bin/ringo_search.rs"
